; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_scoreboard.c_fpm_scoreboard_child_use.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_scoreboard.c_fpm_scoreboard_child_use.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpm_scoreboard_s = type { i32 }
%struct.fpm_scoreboard_proc_s = type { i32, i32 }

@fpm_scoreboard = common dso_local global %struct.fpm_scoreboard_s* null, align 8
@fpm_scoreboard_i = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fpm_scoreboard_child_use(%struct.fpm_scoreboard_s* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.fpm_scoreboard_s*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.fpm_scoreboard_proc_s*, align 8
  store %struct.fpm_scoreboard_s* %0, %struct.fpm_scoreboard_s** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.fpm_scoreboard_s*, %struct.fpm_scoreboard_s** %4, align 8
  store %struct.fpm_scoreboard_s* %8, %struct.fpm_scoreboard_s** @fpm_scoreboard, align 8
  %9 = load i32, i32* %5, align 4
  store i32 %9, i32* @fpm_scoreboard_i, align 4
  %10 = load %struct.fpm_scoreboard_s*, %struct.fpm_scoreboard_s** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call %struct.fpm_scoreboard_proc_s* @fpm_scoreboard_proc_get(%struct.fpm_scoreboard_s* %10, i32 %11)
  store %struct.fpm_scoreboard_proc_s* %12, %struct.fpm_scoreboard_proc_s** %7, align 8
  %13 = load %struct.fpm_scoreboard_proc_s*, %struct.fpm_scoreboard_proc_s** %7, align 8
  %14 = icmp ne %struct.fpm_scoreboard_proc_s* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  br label %23

16:                                               ; preds = %3
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.fpm_scoreboard_proc_s*, %struct.fpm_scoreboard_proc_s** %7, align 8
  %19 = getelementptr inbounds %struct.fpm_scoreboard_proc_s, %struct.fpm_scoreboard_proc_s* %18, i32 0, i32 1
  store i32 %17, i32* %19, align 4
  %20 = call i32 @time(i32* null)
  %21 = load %struct.fpm_scoreboard_proc_s*, %struct.fpm_scoreboard_proc_s** %7, align 8
  %22 = getelementptr inbounds %struct.fpm_scoreboard_proc_s, %struct.fpm_scoreboard_proc_s* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  br label %23

23:                                               ; preds = %16, %15
  ret void
}

declare dso_local %struct.fpm_scoreboard_proc_s* @fpm_scoreboard_proc_get(%struct.fpm_scoreboard_s*, i32) #1

declare dso_local i32 @time(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
